--- a/src/global.css
+++ b/src/global.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@600;700;800&display=swap");
 body {
   margin: 0;
   line-height: normal;
@@ -8,15 +8,12 @@ body {
   --font-inter: Inter;
 
   /* font sizes */
-  --font-size-29xl: 48px;
-  --font-size-21xl: 40px;
-  --font-size-13xl: 32px;
-  --font-size-5xl: 24px;
   --font-size-base: 16px;
+  --font-size-29xl: 48px;
+  --font-size-5xl: 24px;
 
   /* Colors */
   --color-white: #fff;
-  --color-black: #000;
   --color-blue: #4605fd;
 
   /* border radiuses */
