--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,155 @@
-.App {
-  text-align: center;
+.desktop-1-child {
+  position: absolute;
+  top: 61px;
+  left: 46px;
+  border-radius: 12px;
+  width: 440px;
+  height: 1250px;
+  background-color: black;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.about-us {
+  margin: 0;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.about-us-sitemap-container {
+  position: absolute;
+  top: 929px;
+  left: 156px;
+  font-weight: 600;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.about {
+  position: absolute;
+  top: 847px;
+  left: 153px;
+  font-size: var(--font-size-29xl);
 }
-
-.App-link {
-  color: #61dafb;
+.s {
+  font-size: 12px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.servicess {
+  position: absolute;
+  top: 591px;
+  left: 151px;
+  font-weight: 600;
+  font-size: 40px;
+}
+.iprint-wimart-warehouse-container,
+.redivivus {
+  position: absolute;
+  top: 235px;
+  left: 154px;
+  font-weight: 600;
+  display: inline-block;
+  width: 321px;
+  height: 328px;
+}
+.redivivus {
+  top: -90px;
+  left: 206px;
+  font-size: var(--font-size-29xl);
+  font-weight: 800;
+  width: 269px;
+  height: 26px;
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  -webkit-text-stroke: 2px #0996d3;
+}
+.dot-net-development-container,
+.product {
+  position: absolute;
+  left: 154px;
+  font-weight: 600;
+}
+.product {
+  top: 166px;
+  font-size: 36px;
+}
+.dot-net-development-container {
+  top: 663px;
+}
+.fb-removebg-preview-1-icon,
+.logor-1-icon {
+  position: absolute;
+  top: 1119px;
+  left: 133px;
+  width: 138px;
+  height: 113px;
+  object-fit: cover;
+}
+.logor-1-icon {
+  top: 71px;
+  left: 114px;
+  width: 80px;
+  height: 81px;
+}
+.connect {
+  position: absolute;
+  top: 1059px;
+  left: 147px;
+  font-size: var(--font-size-29xl);
+}
+.desktop-1-item {
+  position: absolute;
+  top: 64px;
+  left: 533px;
+  width: 722px;
+  height: 88px;
+}
+.desktop-1-inner {
+  top: 95px;
+  left: 1060px;
+  border-radius: var(--br-11xl);
+  background-color: var(--color-blue);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+.contact-us,
+.desktop-1-inner,
+.rectangle-div {
+  position: absolute;
+  width: 125px;
+  height: 32px;
+}
+.contact-us {
+  top: 101px;
+  left: 1077px;
+  font-size: var(--font-size-base);
+  font-weight: 600;
+  display: inline-block;
+}
+.rectangle-div {
+  top: 93px;
+  left: 894px;
+  border-radius: var(--br-11xl);
+  background-color: var(--color-blue);
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+}
+.about-us1,
+.products {
+  position: absolute;
+  display: inline-block;
+}
+.about-us1 {
+  top: 99px;
+  left: 918px;
+  font-size: var(--font-size-base);
+  font-weight: 600;
+  width: 101px;
+  height: 26px;
+}
+.products {
+  top: 176px;
+  left: 534px;
+  font-size: 32px;
+  color: #000;
+  width: 327px;
+  height: 31px;
+}
+.desktop-1 {
+  position: relative;
+  background-color: var(--color-white);
+  width: 100%;
+  height: 1800px;
+  overflow: hidden;
+  text-align: left;
+  font-size: var(--font-size-5xl);
+  color: var(--color-white);
+  font-family: var(--font-inter);
 }
