--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,15 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@600;700;800&display=swap");
-body {
-  margin: 0;
-  line-height: normal;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+    
+
+    
 }
-:root {
-  /* fonts */
-  --font-inter: Inter;
-
-  /* font sizes */
-  --font-size-base: 16px;
-  --font-size-29xl: 48px;
-  --font-size-5xl: 24px;
-
-  /* Colors */
-  --color-white: #fff;
-  --color-blue: #4605fd;
-  --color-black:#000;
-
-  /* border radiuses */
-  --br-11xl: 30px;
+  
+input[type="date"]::-webkit-calendar-picker-indicator:hover {
+    background: transparent;
+    cursor: pointer;
 }
